--- a/Server/package.json
+++ b/Server/package.json
@@ -14,7 +14,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx --watch ./server.ts"
+    "dev": "tsx --watch ./src/server.ts"
   },
   "keywords": [],
   "author": "",
