add auth controller

--- a/Server/.env
+++ b/Server/.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://ziv:do4todxezfIwM8hq@cluster0.ptcfwei.mongodb.net/native-app?retryWrites=true&w=majority&appName=Cluster0
-
+JWT_SECRET=your-secret-key
+JWT_EXPIRE=1d
