--- a/Server/package.json
+++ b/Server/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "axios": "^1.11.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
