--- a/myFirstApp/package.json
+++ b/myFirstApp/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
+    "@tanstack/react-query": "^5.85.5",
     "axios": "^1.11.0",
     "expo": "53.0.22",
     "expo-blur": "~14.1.5",
